# fsy-chat

./: .gitignore  Cargo.toml  README.md  config.toml
.cursor/rules/: 01-project-structure.mdc  02-code-conventions.mdc  03-workflow-guide.mdc  04-architecture.mdc  05-dependency-guide.mdc
docs/: department.json  kf.csv  qa.json  sale.json  技术问题.csv  损伤检测.md
front/: .prettierrc.json  app.config.ts  brush-drawing-animation.html  package.json
front/src/: app.css  app.tsx  routeTree.gen.ts
front/src/api/: chat.ts  image.ts  index.ts  request.ts  types.ts  video.ts
front/src/components/: ChatContent.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  SessionList.tsx  SessionListItem.tsx  WindowErrorAlert.tsx
front/src/hooks/: chat.ts  chat_manager.ts  image_generate.ts  video_generate.ts
front/src/routes/: __root.tsx  about.tsx  chat.tsx  image.tsx  index.tsx  video.tsx
front/src/types/: chat.ts
front/src/utils/: chatUtils.ts
src/: agent.rs  chat.rs  client.rs  config.rs  document_loader.rs  embedding.rs  errors.rs  kernel.rs  main.rs  models.rs  vector_store.rs
src/aliyun/: client.rs  embedding.rs  image.rs  mod.rs  scheme.rs
src/aliyun/image/: image.rs  mod.rs  schemes.rs
src/aliyun/media/: imaga.rs  mod.rs  schemes.rs  video.rs
src/configs/: config.rs  document.rs  embedding.rs  mod.rs  provider.rs
src/session_manager/: manager.rs  sessions.rs
src/storages/: file.rs  mod.rs  storage.rs
src/tools/: adder.rs
src/web/: app_state.rs  errors.rs  fingerprint.rs  mod.rs  preambles.rs  routes.rs  session_manager.rs
src/web/handlers/: mod.rs  (+4 more)
(+33 files in other folders)
