[package]
name = "fsy-ai-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.12.0", features = ["all"] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
axum = { version = "0.8.1", features = ["ws", "macros"] }
futures-util = "0.3.31"
thiserror = "2.0.12"
text-splitter = { version = "0.25.1", features = ["markdown"] }
rig-qdrant = "0.1.11"
qdrant-client = "1.13.0"
reqwest = "0.12.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.20"
clap = { version = "4.5.36", features = ["derive"] }
tokio-stream = "0.1.15"
uuid = "1.16.0"
async-stream = "0.3.6"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
